--- a/src/index.css
+++ b/src/index.css
@@ -16,7 +16,7 @@
   }
 
   body {
-    @apply font-sans antialiased bg-luxury-light text-luxury-dark overflow-x-hidden;
+    @apply font-sans antialiased bg-[#EFEFEE] text-luxury-dark overflow-x-hidden;
   }
 
   h1,
