--- a/src/index.css
+++ b/src/index.css
@@ -33,6 +33,9 @@
   .container-custom {
     @apply max-w-7xl mx-auto px-4 sm:px-6 lg:px-8;
   }
+  .container-custom-blog {
+    @apply max-w-[1350px] mx-auto ;
+  }
 
   .btn-primary {
     @apply px-8 py-3 bg-primary text-white font-medium transition-all duration-300 hover:bg-primary/90 active:scale-95;
